--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
-   <marquee style="font-family:Book Antiqua; color: #FFFFFF" bgcolor="#000080" 
-scrollamount="5">This is an example of Marquee (Loop : 3)</marquee>
+   <marquee style="font-size: 240px;; color: #FFFFFF" bgcolor="#ffffff" 
+scrollamount="5">LCD LCD LCD All, checkout sa live, 8.8 sale....</marquee>
 
   </body>
 </html>
