--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-   <marquee style="font-size: 240px;; color: #FFFFFF" bgcolor="#ffffff" 
+   <marquee style="font-size: 240px; 
 scrollamount="5">LCD LCD LCD All, checkout sa live, 8.8 sale....</marquee>
 
   </body>
